Bump to 1.3.0, added command usage messages, updated other command stuff